# figure_skating_element_parser

./: README.md
figure_skating_element_parser/: Cargo.toml  Makefile  README.md  docs.md  elements.txt
figure_skating_element_parser/src/: grammar.pest  lib.rs  main.rs
figure_skating_element_parser/tests/: grammar_test.rs
